--- a/myapp/templates/Aview_hotels.html
+++ b/myapp/templates/Aview_hotels.html
@@ -212,7 +212,8 @@ img {
                         <span class="review-no"> Reviews</span>
                     </div>
                     <p class="product-description">{{hotel.add_details}}</p>
-                    <h4 class="price">current price: <span></span>{{hotel.hotel_price}}</h4>
+                    <h4 class="price">current price: <span></span>₹{{hotel.hotel_price}}</h4>
+                    <h4 class="price">Rooms Available: <span></span>{{hotel.hotel_rooms}}</h4>
                     <p class="vote"><strong></strong>{{hotel.hotel_adderss}}<strong></strong></p>
                     <h5 class="sizes">Country:{{hotel.hotel_country}}
                         
