--- a/myapp/templates/login.html
+++ b/myapp/templates/login.html
@@ -27,14 +27,11 @@
                        
                         <input type="submit" class="mainBtn" id="submit" value="Login">
                     </form>
-                    <a href="{% url 'register' %}"><button class="btn btn-primary" style="width: auto; background-color: rgb(13, 135, 235);"> Register </button></a>
+                    <a  href="{% url 'register' %}"><button class="btn btn-primary" style="width: auto; background-color:rgb(114, 170, 114);"> Register </button></a>
                 </div>
                 <div class="row mt-3">
-                    <div class="col-6">
-                      <a href="{% url 'fpassword' %}" class="text"><small>Forgot password?</small></a>
-                    </div>
-                    <div class="col-6 text-right">
-                      <a href="{% url 'hotelsregister' %}" class="text"><small>Create new account</small></a>
+                    <div class="text-right">
+                      <a href="{% url 'fpassword' %}" class="text"><h3>Forgot password?</h3></a>
                     </div>         
                 </div> 
             </div>
