--- a/myapp/templates/payment.html
+++ b/myapp/templates/payment.html
@@ -51,7 +51,7 @@
 		border-radius: 4px;
 		cursor: pointer;
 		padding: 4px 8px;
-		background-color: #ffaaa7;
+		background-color: #6bda11;
 		color: white;
 		font-size: 1.2em;
 		font-weight: 600;
@@ -60,9 +60,10 @@
 	</style>
 </head>
 <br><br><br><br><br><br><br>
+<div class="container" style="height: 50vh; padding: 200px 0;">
 <body>
 	<div class="card">
-	<h1 class="title">Payment</h1>
+	<h1 class="h1">Thank You For Chossing This Travel Agency...</h1>
 	<small class="muted"></small
 	>
 	<div class="btn_container">
