--- a/myapp/templates/paymentfail.html
+++ b/myapp/templates/paymentfail.html
@@ -8,10 +8,20 @@
 
 <div class="partner-list">
 
-    <div class="container" style="height: 100vh; padding: 200px 0;">
-        <h1 style="font-size: 100px;">Payment Fail</h1>
+    <div class="container" style="height: 50vh; padding: 200px 0;">
+  
+        <h1 style="font-size: 75px; color:rgb(185, 64, 64); font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif; width: 1000px;
+        border: 7px solid rgb(48, 49, 48);
+        background-color: rgb(250, 246, 246);
+        padding: 50px;
+        margin: 20px;">
+          Payment Fail Pelse Try Again...<i class="fa fa-close" style="font-size:78px;color:red"></i></h1>
     </div>
-    
+    <br><br><br><br>
+    <br><br><br><br>
+    <br><br><br><br>
+
+
     <div class="container">
         <div class="row">
 
