--- a/myapp/templates/reservation.html
+++ b/myapp/templates/reservation.html
@@ -181,9 +181,10 @@ img {
                 <br>
                 <div class="details col-md-6">
                     <h3 class="product-title"></h3>
+                    <h5 class="h3"><label>*Bokking Hotels</label></h5>
                     {% for book in books %}
                     <div class="text-center">
-                        <h1>------------------</h1>
+                        <h1>--------------------------------------------------</h1>
                         <h5 class="h4">
                         <label>Hotel Name:</label>
                         {{book.hname.hotel_name}}
@@ -191,7 +192,7 @@ img {
                         <div class="h4 font-weight-100">
                           <h5 class="h4">
                           <label>Hotel Price:</label>
-                          <i class="ni business_briefcase-24 mr-2"></i>{{book.bookprice}}
+                          <i class="ni business_briefcase-24 mr-2"></i>₹{{book.bookprice}}
                           </h5>
                         </div>
                         <div class="h4 mt-4">
@@ -210,7 +211,12 @@ img {
                           <h3 class="h4">
                             <label>Booking Id:</label>
                             {{book.booking_id}}<span class="font-weight-light"></span>
-                            </h3>
+                          </h3>
+                          <h3 class="h4">
+                            <label>Payment Id:</label>
+                            {{book.pay_id}}<span class="font-weight-light"></span>
+                          </h3>
+                    <a><button class="btn btn-primary" style="width: auto; background-color:rgb(219, 41, 41);"> Cancel Booking  </button></a>
                         </div>
                     </div>
                     {% endfor %}
@@ -222,30 +228,7 @@ img {
   
 
 
-    <br><br><br><br><br>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+<br><br><br><br><br>
 <div class="partner-list">
     <div class="container">
         <div class="row">
