--- a/myapp/templates/reservation.html
+++ b/myapp/templates/reservation.html
@@ -182,26 +182,42 @@ img {
                 <div class="details col-md-6">
                     <h3 class="product-title"></h3>
                     <h5 class="h3"><label>*Bokking Hotels</label></h5>
+                    {{msg}}
                     {% for book in books %}
-                    <div class="text-center">
-                        <h1>--------------------------------------------------</h1>
+                    <style>
+                      .reservation-data{
+                        width : 450%;
+                        padding: 20px;
+                        border: 4px solid black;
+                        margin: 10px auto;
+                      }
+                      .reservation-data .h4{
+                        text-align: left;
+                      }
+                    </style>
+                        <h1>---------------------------------------------------</h1>
+                    <div class="text-center reservation-data">
                         <h5 class="h4">
                         <label>Hotel Name:</label>
                         {{book.hname.hotel_name}}
                         </h5>
-                        <div class="h4 font-weight-100">
+                        <div class="h5">
                           <h5 class="h4">
                           <label>Hotel Price:</label>
                           <i class="ni business_briefcase-24 mr-2"></i>₹{{book.bookprice}}
                           </h5>
                         </div>
-                        <div class="h4 mt-4">
+                        <div class="h4">
                           <label>Hotel Check In Date:</label>
                           <i class="ni business_briefcase-24 mr-2"></i>{{book.check_in}}
                         </div>
-                        <div class="h4 mt-4">
+                        <div class="h4">
                           <label>Hotel Check Out Date:</label>
                           <i class="ni business_briefcase-24 mr-2"></i>{{book.check_out}}
+                        </div>
+                        <div class="h4">
+                          <label>Number Of Person:</label>
+                          <i class="ni business_briefcase-24 mr-2"></i>{{book.no_person}}
                         </div>
                         <div>
                         <h5 class="h4">
@@ -216,7 +232,16 @@ img {
                             <label>Payment Id:</label>
                             {{book.pay_id}}<span class="font-weight-light"></span>
                           </h3>
-                    <a><button class="btn btn-primary" style="width: auto; background-color:rgb(219, 41, 41);"> Cancel Booking  </button></a>
+                          <div class="tab-pane active" id="pic-1"><img src=" {{book.hotel_photos.url}}" /></div>
+
+                          {% if book.cancel_payment == False %}
+                    <a href="{% url 'cancelbooking' book.id %}"><button class="btn btn-primary" style="width: 100%;color: black; background-color:rgb(255, 255, 255); border: 5px solid red; border-radius: 20px;"> Cancel Booking  </button></a>
+                          {% elif book.cancel_payment == True and book.refund == False %}
+                          <button class="btn btn-primary" style="width: 100%; background-color:rgb(219, 41, 41);"> Booking Has Cancelled and Payment Will be refunded Soon  </button>
+                          {% else %}
+                          <button class="btn btn-info" style="width: 100%;"> Refunded </button>
+
+                          {% endif %}
                         </div>
                     </div>
                     {% endfor %}
